constructed html layout for form and added a few labels/inputs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,70 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    
+    <main>
+      <h1 id="title">Project Survey Form</h1>
+      <section id="form-section">
+        <p id="description">Let me know a little bit about your project</p>
+        <form id="survey-form">
+          <div class="form-row">
+            <div class="form-label">
+              <label id="name-label" for="name">* Name: </label>
+            </div>
+            <div class="form-input">
+              <input autofocus type="text" name="name" id="name" class="input-field" placeholder="Enter your name" required>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-label">
+              <label id="email-label" for="email">* Email: </label>
+            </div>
+            <div class="form-input">
+              <input type="email" name="email" id="email" class="input-field" placeholder="Enter your email" placeholder>
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-label">
+              <label id="phone-label" for="number">Phone Number: </label>
+            </div>
+            <div class="form-input">
+              <input type="tel" name="number" id="number" class="input-field" placeholder="555-555-5555">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-label">
+              <label id="plaftorm-label" for="platform">Platform: </label>
+            </div>
+            <div class="form-input">
+              <input >
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-label">
+
+            </div>
+            <div class="form-input">
+
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-label">
+
+            </div>
+            <div class="form-input">
+
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-label">
+
+            </div>
+            <div class="form-input">
+
+            </div>
+          </div>
+        </form>
+      </section>
+    </main>
+
   </body>
 </html>
